# codeagents

./: .gitignore  CLAUDE.md  PYPI_VALIDATION.md  ProgramScores.ipynb  README.md  agents_from_scratch_docker.py  docker_test.py  llmtools.py  mcp-problem.txt  metrics.sh  problem.txt  pypi_validator.py  pyproject.toml  requirements.txt  saveexp.sh  test_pypi_validator.py
calculator_dir/: Dockerfile  agentic_flow_results.json  main.py  test_main.py
src_calccmd_gpt41_1/: Dockerfile  README.md  agentic_flow_results.json  conftest.py  main.py  metrics.txt  problem.txt  test_main.py
weather_api/: Dockerfile  agentic_flow_results.json  main.py  problem.txt  requirements.txt  test_main.py
