[project]
name = "codeagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "argparse>=1.4.0",
    "cachetools>=5.5.2",
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "litellm>=1.66.0",
    "h11==0.16.0",
    "openai>=1.69.0",
    "python-dotenv>=1.1.0",
    "sympy>=1.13.3",
    "uszipcode>=1.0.1",
    "uvicorn>=0.34.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "pipdeptree>=2.26.1",
    "radon>=6.0.1",
]
